# reelforgebeta

./: .dockerignore  .gitignore  Cargo.toml  Frontend.Dockerfile  MILESTONE_STATUS.md  README.md  VAULT_AUTHORITY_REPORT.md  VAULT_DELETE_REPORT.md  VAULT_PIPELINE_MAP.md  backend-port-report.md  content-intelligence-foundation-report.json  content-intelligence-report.json  docker-compose.dev.yml  docker-compose.yml  documentary-collections-report.json  experience-unification-plan.json  featured-creator-ui-report.json  guide-me-readability-report.json  hero-asset-certification-report.json  hero-background-fix-report.json  hero-background-fix-validation.json  hero-background-forensic-report.md  hero-carousel-ui-report.json  hero-certification-report.json  hero-cinematic-restoration-report.json  hero-container-forensic.json  hero-dominance-after.json  hero-dominance-report.json  hero-duplicate-truth.json  hero-layout-hotfix-report.json  hero-manager-controls-report.md  hero-media-domain-audit.json  hero-media-domain-report.json  hero-media-domain-runtime.json  hero-media-exclusivity-report.json  hero-obstruction-report.json  hero-publishing-control-report.json  hero-publishing-truth.json  hero-registry-truth-report.json  hero-registry-truth-runtime.json  (+32 more)
backend/: .env.example  .gitignore  .railwayignore  Cargo.toml  Cargo.toml.bak  Dockerfile  build.rs  railway.json  seed.sql  start.sh
backend/.cargo/: config.toml
backend/.sqlx/: query-311f93b765431d12317ac751d39d370b5de87336179ef9e27313aca8c7de2fd1.json  query-8143935867a30632fbacdc2f2be28555a3b0423e44f473f4dbbf55388744dfce.json  query-96475aa21bbc2d66d24afaa47dc56e8d0093a382f443b62b57dd9e8a8e431a0a.json  query-9e9adad63e09f8fff86f5a069f3eea157c7626a262de31896bf0fb284166a95c.json  query-a7a2cc629eeb7da87260fce8f451389d383e65758b473c93250b39894266a4bc.json  query-b134103df8ee1807e3c7a7660fb17380a5e2d14c65cefac0fd582776e8e1221a.json  query-be5cbe5e5a82b9d055997e06e0469953270317ecbac26d12e8924f9c6250f5e1.json  query-c517a0077a9fe747750bff50f2fab6c7e66b430c11605e2ef6c79f332a0522df.json  query-ee432005b7c6045bc6eda6da9708b8800df2d1e8323a75190ec86e78b56219ca.json
backend/docs/: RUST_BUILD.md
backend/migrations/: 202512281_create_reels_and_ingestion.sql  202512282_add_smart_production_fields.sql  202512283_add_reel_validated.sql  202512284_studio_hierarchy.sql  202512285_platform_configuration.sql  202512286_monetization_foundation.sql  202512287_watch_intelligence.sql  202512288_viewer_experience_layer.sql  (+12 more)
(+814 files in other folders)
