[package]
name = "reelforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
