[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Optional runtime catalog lookup after adapter mapping (viewer bind only).
runtime_asset_mode = []

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"  # Add this for URL encoding
rand = "0.9.2"
actix-files = "0.6.9"
actix-multipart = "0.7"
futures-util = "0.3.32"
actix-ws = "0.4.0"
jsonschema = "0.26"

[dev-dependencies]
serde_json = "1.0"
